# glass

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
demo/: CMakeLists.txt  demo.cpp  main.cpp
demo/resources/: SolarSystem.xlsx
demo/resources/images/planet_texture/earth/earth/: merge_cloud.py  merge_map.py
doc/: 1_Introduction.html  1_Introduction.md
doc/theory/: Exponential_Soft_Shadow_Mapping.html  Exponential_Soft_Shadow_Mapping.md  Exponential_Soft_Shadow_Mapping.txt  Exponential_Soft_Shadow_Mapping_ch.html  Exponential_Soft_Shadow_Mapping_ch.md
figure/: figure.cpp  figure.h  generate_code.py
gl/: gl_objects.cpp  gl_objects.h  glsl_objects.cpp  glsl_objects.h  glvector.cpp  glvector.h  mat.cpp  mat.h
gl/camera/: camera.cpp  camera.h
gl/light/: light.cpp  light.h
gl/material/: material.cpp  material.h
gl/model/: model.cpp  model.h
gl/vec/: bvec.cpp  bvec.h  dvec.cpp  dvec.h  fvec.cpp  fvec.h  ivec.cpp  ivec.h  uvec.cpp  uvec.h  vec.h  vec_process.cpp
gl/view_mode/: model_view.h  planet_view.h  scenes_view.h
glsl/PBR/: fragment.glsl  vertex.glsl
glsl/Phong/: fragment.glsl  vertex.glsl
glsl/Plane/: fragment.glsl  vertex.glsl
glsl/Shadow/: fragment.glsl  vertex.glsl
glsl/Skybox/: fragment.glsl  vertex.glsl
glsl/common/: fragment_utils.glsl  utils.glsl
glsl/common/lighting/: phong.glsl
include/glass/: BO  Camera  DirLight  EBO  FBO  GLFigure  GlassWindow  Layout  Material  Model  PointLight  RBO  Scene3D  Shader  SpotLight  UBO  Uniform  VAO  VBO  common.h  mat  sampler2D  samplerCube  vec  widget.h
include/glass/utils/: exceptions.h  geometry.h  glvector.h  helper.h  image.h  path.h  shaders.h  str.h  tictoc.h  transform.h  type.h
include/glass/utils/glad/: glad.h
include/glass/utils/stb_image/: stb_image.h  stb_image_write.h
include/glass/utils/vec/: bvec.h  dvec.h  fvec.h  ivec.h  uvec.h  vec_process.h
other_resource/NN_learning/: myplot.py  nn_utils.py  save.py  tfnn.py
other_resource/NN_learning/classifier/: classifier.py  main.py
other_resource/NN_learning/fitting/: fitting_test.py
other_resource/NN_learning/handwriting/: handwriting.py  main.py
other_resource/device/: Write.py  device.py  excel.py  inputer.py  schedule.py  serial_port.py
other_resource/matrix/: matrix.cpp
other_resource/md2html/: code2html.py  common.py  md2html.py  mkbook.py  template_code.html  template_offline.html  template_online.html
other_resource/md2html/plugins_offline/highlight/: monokai-sublime.css
other_resource/md2html/plugins_online/: MathJax_config.js  inner.css  intereactive.js  outer.css
other_resource/md2html/plugins_online/highlight/: atom-one-light.css
other_resource/note/Data_Structures_and_Algorithm_Analysis_in_Java/: 01_introduction.html  01_introduction.md
other_resource/note/Data_Structures_and_Algorithm_Analysis_in_Java/Code/k_selection/: Makefile  find_main.py
other_resource/note/Data_Structures_and_Algorithm_Analysis_in_Java/Code/k_selection/src/: Anagram.java  KSelector.java  Main.java  show.py
other_resource/note/Data_Structures_and_Algorithm_Analysis_in_Java/Code/k_selection/src.html/: KSelector.java.html
other_resource/note/JDBC/: JDBC.md  MySQL.html  MySQL.md
other_resource/note/RegularExpression/: RegularExpression.html  RegularExpression.md
other_resource/note/TODO/: TODO.md  long_term.html  long_term.md
other_resource/note/mkdown/: Markdown.html  markdown_note.md
other_resource/test_tiff/: Makefile  main.cpp  path.cpp  tiffimage.cpp  tiffimage.h
other_resource/utils/: persis.py  regedit.py
resources/: self.txt  solar_system.txt
resources/images/: sin_projection.py
resources/images/parallax/: height2normal.py
resources/images/planet_texture/earth/earth/: normal_map.py
src/: bo.cpp  camera.cpp  common.cpp  dir_light.cpp  ebo.cpp  fbo.cpp  glasswindow.cpp  layout.cpp  mat.cpp  material.cpp  model.cpp  point_light.cpp  rbo.cpp  sampler2D.cpp  samplerCube.cpp  scene3d.cpp  shader.cpp  spot_light.cpp  ubo.cpp  uniform.cpp  vao.cpp  vbo.cpp
src/utils/: geometry.cpp  glfigure.cpp  glvector.cpp  helper.cpp  image.cpp  modify_code.py  path.cpp  shaders.cpp  str.cpp  tictoc.cpp  transform.cpp
src/utils/glad/: glad.c
src/utils/glsl/: generate_hardcode.py  shaders.h
src/utils/glsl/HDR/: fragment.glsl  vertex.glsl
src/utils/glsl/blur/: fragment.glsl  vertex.glsl
src/utils/glsl/common/: fragment_utils.glsl  utils.glsl
src/utils/glsl/common/lighting/: phong.glsl
src/utils/glsl/debug/: fragment.glsl  vertex.glsl
src/utils/glsl/gbuffer/: fragment.glsl  vertex.glsl
src/utils/glsl/lighting/: fragment.glsl
src/utils/glsl/luminance/: fragment.glsl
src/utils/glsl/merge/: fragment.glsl
src/utils/glsl/shadow/dir_light/: vertex.glsl
src/utils/glsl/shadow/point_light/: fragment.glsl  geometry.glsl  vertex.glsl
src/utils/glsl/skybox/: fragment.glsl  vertex.glsl
src/utils/vec/: bvec.cpp  dvec.cpp  fvec.cpp  ivec.cpp  uvec.cpp  vec_process.cpp
utils/color/: color.cpp  color.h
utils/exception/: exception.h
utils/geometry/: geometry.cpp  geometry.h  transform.cpp  transform.hpp
utils/image/: image.cpp  image.h  image_process.cpp  image_process.h
utils/matrix/: matrix.hpp
utils/path/: path.cpp  path.h
utils/str_utils/: str.cpp  str.h
utils/tictoc/: tictoc.cpp
utils/type/: type.cpp  type.h
